# harbor_router

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yaml  docker.yaml  helm.yaml
deploy/: Chart.yaml  values.yaml
deploy/grafana/: harbor-router-dashboard.json
deploy/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: architecture.md  deployment.md  observability.md  runbook.md
src/: cache.rs  circuit_breaker.rs  config.rs  discovery.rs  main.rs  metrics.rs  proxy.rs  resolver.rs
